data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_554.wast
;; - **Test 5**:    Implement a loop with a complex branching table (`br_table`) that should handle different branch targets including a branch back to the loop itself under incorrect bounds handling.     Constraint: `br_table` indirect branch without breaking.     Relation: Handling infinite loops through mismanaged indirect branching targets.

(assert_invalid
  (module
    (func (loop
      (block (br_table 0 0 (i32.const 1))) 
    ))
  )
  "type mismatch"
)